# dagster-home-automation

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pipeline.yml  wireguard.yml
helm-charts/values/: prod.yaml
src/dagster_home_automation/: definitions.py
src/dagster_home_automation/defs/: resources.py
src/dagster_home_automation/defs/assets/: bronze.py  raw.py  silver.py
src/home_automation/defs/: resources.py
