[project]
name = "dagster_home_automation"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.15",
    "dagster-aws>=0.29.8",
    "dagster-deltalake>=0.29.8",
    "dagster-deltalake-polars>=0.29.8",
    "dagster-k8s>=0.29.8",
    "dagster-openlineage>=0.2.1",
    "dagster-postgres>=0.29.8",
    "polars>=1.41.2",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.13.10",
    "dagster-webserver>=1.13.10",
    "pytest (>=9.1.1,<10.0.0)",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_home_automation"
registry_modules = [
    "dagster_home_automation.components.*",
]


